# caloreat-backend

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fix_alembic.py  main.py  pyproject.toml  requirements.txt  setup_infra.sh
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0d2d67980bd8_add_predictionlog_table.py  2525031a5653_initial_migration.py  286c8af40e7f_add_foodname_in_mealitem.py  3ec1b652e624_add_foods_nutritions_tables.py  810a6959eee1_add_user_fields.py  96da12e0d383_fix_typo_in_meal_items_nutiritionsta_.py  e94d161302c5_descriptive_message_for_the_migration.py  ef6762d11f05_add_provider_field_and_make_password_.py  fa3d27ae7ab0_add_meal_domain_tables.py
app/clients/: ai_client.py  s3_client.py
app/common/: image_utils.py
app/core/: auth.py  jwt_context.py  settings.py
app/routers/: __init__.py  ai_feedback.py  food.py  logs.py  meal.py  nutrition.py  oauth.py  stats.py  upload_router.py  user.py  user_allergy.py  user_health_condition.py  user_profile.py  user_profile_form.py
app/services/: __init__.py  ai_feedback.py  file_manager.py  food.py  meal.py  meal_image.py  meal_item.py  meal_log.py  (+9 more)
infra/: main.tf  outputs.tf  provider.tf  variables.tf
scripts/: export_dataset.py  inspect_zip.py  revert_seeding.py  seed_kfood_to_s3.py  verify_s3_url.py  verify_training_load.py
tests/: conftest.py  test_ai_client.py  test_health_condition.py  test_meal.py  test_mlops.py  test_profile.py  test_s3_client.py  test_stats.py  test_tmp_cycle.py  test_user.py
(+44 files in other folders)
